--- a/app/src/main/res/layout/fragment_rule.xml
+++ b/app/src/main/res/layout/fragment_rule.xml
@@ -148,6 +148,14 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_netspeed_per_second"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="实时网速是"
+        android:textColor="@color/black"/>
+
+    <TextView
         android:id="@+id/tv_recommend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
